Renamed LeiaLearnsService to VocabularyService. Added UniqueKeysService, StateTrackerService, and QueryService. Added helper method QueryService#queryWithRetry. Added endpoint StateTrackerService#recordActionStep for POST "/api/state/step/action". Added endpoint StateTrackerService#recordPerceptionStep for POST "/api/state/step/perception". Added definitions ModelNodeData and SymbolReference to "swagger.yaml". Changed type of Symbol#ordinal to Long in "swagger.yaml". Implemented Unique Key mechanism for aggregate ModelNode. Added properties CreateModelNodeCommand#data and CreateModelNodeCommand#isSilent. Added property ModelNodeCreatedEvent#data. Added persistent query model for aggregate ModelNode. Added queries ModelNodeByIdQuery, ModelNodeByKeyQuery, and NextModelNodeQuery.
