# core/src/main/java/org/leialearns/axon/model/node/event/ModelNodeCreatedEvent.java
@@ -4,10 +4,12 @@ import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
 import lombok.Builder;
 import lombok.Value;
 import org.leialearns.axon.StackEvent;
+import org.leialearns.model.ModelNodeData;
 
 @Value
 @Builder
 @JsonDeserialize(builder = ModelNodeCreatedEvent.ModelNodeCreatedEventBuilder.class)
 public class ModelNodeCreatedEvent implements StackEvent {
     private String id;
+    private ModelNodeData data;
 }
