# core/src/main/java/org/leialearns/axon/model/node/query/ModelNodeByKeyQuery.java
@@ -1,0 +1,10 @@
+package org.leialearns.axon.model.node.query;
+
+import lombok.Builder;
+import lombok.Value;
+
+@Value
+@Builder
+public class ModelNodeByKeyQuery {
+    private String key;
+}
